--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4913,3 +4913,12 @@ p {
  .sk_branding  {
   display: none !important;
  }
+
+
+ .hide-insta-button {
+  background-color: #fff;
+  margin-top: -40px;
+  position: relative;
+  z-index: 99;
+  height: 45px;
+ }
