--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,16 +1,14 @@
 /**
-* Template Name: Strive
-* Template URL: https://bootstrapmade.com/strive-bootstrap-business-template/
-* Updated: Sep 20 2025 with Bootstrap v5.3.8
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
+* Template Name: Basic One
+* Updated: 10/fev/2026
+* Author: Tiago Oliveira
+* License: https://www.tioliveira.com.br
 */
 
 @charset "UTF-8";
 
 /*--------------------------------------------------------------
 # Font & Color Variables
-# Help: https://bootstrapmade.com/color-system/
 --------------------------------------------------------------*/
 /* Fonts */
 :root {
